[gd_scene load_steps=11 format=3 uid="uid://dpause001menu"]

[ext_resource type="Script" uid="uid://c5hq0mirogawe" path="res://scripts/ui/PauseMenu.gd" id="1_pausemenu"]
[ext_resource type="PackedScene" uid="uid://dupyoobfyolg" path="res://scripts/ui/RunSummaryPanel.tscn" id="2_runsummary"]
[ext_resource type="FontFile" uid="uid://c2ru0ylq10uj0" path="res://fonts/RobotoSerif-ExtraLight.ttf" id="3_font"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_howtoplay"]
bg_color = Color(0.1, 0.1, 0.1, 0.8)
border_width_left = 8
border_width_top = 8
border_width_right = 8
border_width_bottom = 8
border_color = Color(0.85882354, 0.72156864, 0.32941177, 1)
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_button_normal"]
bg_color = Color(0.6, 0.6, 0.6, 0)
border_width_left = 8
border_width_top = 8
border_width_right = 8
border_width_bottom = 8
border_color = Color(0.858824, 0.721569, 0.329412, 1)

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_button"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_button_hover"]
bg_color = Color(0.6, 0.6, 0.6, 0)
border_width_left = 8
border_width_top = 8
border_width_right = 8
border_width_bottom = 8
border_color = Color(0.858824, 0.721569, 0.329412, 1)
shadow_color = Color(0.858824, 0.721569, 0.329412, 0)
shadow_size = 5

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_confirm_panel"]
bg_color = Color(0.07, 0.07, 0.09, 0.95)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0.18, 0.18, 0.22, 1)
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_confirm_button_normal"]
bg_color = Color(0.6, 0.6, 0.6, 0)
border_width_left = 6
border_width_top = 6
border_width_right = 6
border_width_bottom = 6
border_color = Color(0.858824, 0.721569, 0.329412, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_confirm_button_hover"]
bg_color = Color(0.6, 0.6, 0.6, 0)
border_width_left = 6
border_width_top = 6
border_width_right = 6
border_width_bottom = 6
border_color = Color(0.858824, 0.721569, 0.329412, 1)
shadow_color = Color(0.858824, 0.721569, 0.329412, 0)
shadow_size = 5

[node name="PauseMenu" type="Control"]
process_mode = 3
z_index = 100
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_pausemenu")

[node name="Overlay" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
color = Color(0, 0, 0, 0.45)

[node name="Root" type="Control" parent="."]
process_mode = 3
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="RunSummaryPanel" parent="Root" instance=ExtResource("2_runsummary")]
visible = false
layout_mode = 0

[node name="HowToPlayPanel" type="PanelContainer" parent="Root"]
layout_mode = 1
offset_left = 60.0
offset_top = 200.0
offset_right = 560.0
offset_bottom = 720.0
theme_override_styles/panel = SubResource("StyleBoxFlat_howtoplay")

[node name="MarginContainer" type="MarginContainer" parent="Root/HowToPlayPanel"]
layout_mode = 2
theme_override_constants/margin_left = 30
theme_override_constants/margin_top = 30
theme_override_constants/margin_right = 30
theme_override_constants/margin_bottom = 30

[node name="VBoxContainer" type="VBoxContainer" parent="Root/HowToPlayPanel/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 15

[node name="Title" type="Label" parent="Root/HowToPlayPanel/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0.85882354, 0.72156864, 0.32941177, 1)
theme_override_fonts/font = ExtResource("3_font")
theme_override_font_sizes/font_size = 48
text = "HOW TO PLAY"
horizontal_alignment = 1

[node name="Separator1" type="HSeparator" parent="Root/HowToPlayPanel/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 20

[node name="Movement" type="Label" parent="Root/HowToPlayPanel/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_fonts/font = ExtResource("3_font")
theme_override_font_sizes/font_size = 28
text = "A / D - Move Left/Right"

[node name="Jump" type="Label" parent="Root/HowToPlayPanel/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_fonts/font = ExtResource("3_font")
theme_override_font_sizes/font_size = 28
text = "Space - Jump"

[node name="LightAttack" type="Label" parent="Root/HowToPlayPanel/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_fonts/font = ExtResource("3_font")
theme_override_font_sizes/font_size = 28
text = "Left Click - Light Attack Combo"

[node name="HeavyAttack" type="Label" parent="Root/HowToPlayPanel/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_fonts/font = ExtResource("3_font")
theme_override_font_sizes/font_size = 28
text = "Right Click - Heavy Attack"

[node name="Dash" type="Label" parent="Root/HowToPlayPanel/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_fonts/font = ExtResource("3_font")
theme_override_font_sizes/font_size = 28
text = "Shift - Dash / Sprint"

[node name="Dodge" type="Label" parent="Root/HowToPlayPanel/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_fonts/font = ExtResource("3_font")
theme_override_font_sizes/font_size = 28
text = "Ctrl - Roll / Block"

[node name="Defensive" type="Label" parent="Root/HowToPlayPanel/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_fonts/font = ExtResource("3_font")
theme_override_font_sizes/font_size = 28
text = "X - Defensive Ability"

[node name="Ultimate" type="Label" parent="Root/HowToPlayPanel/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_fonts/font = ExtResource("3_font")
theme_override_font_sizes/font_size = 28
text = "R - Ultimate Ability"

[node name="ButtonsContainer" type="VBoxContainer" parent="Root"]
custom_minimum_size = Vector2(600, 0)
layout_mode = 0
offset_right = 600.0
offset_bottom = 300.0
theme_override_constants/separation = 20

[node name="ResumeButton" type="Button" parent="Root/ButtonsContainer"]
custom_minimum_size = Vector2(600, 0)
layout_mode = 2
size_flags_horizontal = 4
theme_override_font_sizes/font_size = 80
theme_override_styles/normal = SubResource("StyleBoxFlat_button_normal")
theme_override_styles/pressed = SubResource("StyleBoxEmpty_button")
theme_override_styles/hover = SubResource("StyleBoxFlat_button_hover")
theme_override_styles/disabled = SubResource("StyleBoxEmpty_button")
theme_override_styles/focus = SubResource("StyleBoxEmpty_button")
text = "Resume"

[node name="SettingsButton" type="Button" parent="Root/ButtonsContainer"]
custom_minimum_size = Vector2(600, 0)
layout_mode = 2
size_flags_horizontal = 4
theme_override_font_sizes/font_size = 80
theme_override_styles/normal = SubResource("StyleBoxFlat_button_normal")
theme_override_styles/pressed = SubResource("StyleBoxEmpty_button")
theme_override_styles/hover = SubResource("StyleBoxFlat_button_hover")
theme_override_styles/disabled = SubResource("StyleBoxEmpty_button")
theme_override_styles/focus = SubResource("StyleBoxEmpty_button")
text = "Settings"

[node name="QuitButton" type="Button" parent="Root/ButtonsContainer"]
custom_minimum_size = Vector2(600, 0)
layout_mode = 2
size_flags_horizontal = 4
theme_override_font_sizes/font_size = 80
theme_override_styles/normal = SubResource("StyleBoxFlat_button_normal")
theme_override_styles/pressed = SubResource("StyleBoxEmpty_button")
theme_override_styles/hover = SubResource("StyleBoxFlat_button_hover")
theme_override_styles/disabled = SubResource("StyleBoxEmpty_button")
theme_override_styles/focus = SubResource("StyleBoxEmpty_button")
text = "Quit"

[node name="ConfirmDialog" type="Control" parent="Root"]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="ConfirmOverlay" type="ColorRect" parent="Root/ConfirmDialog"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.7)

[node name="ConfirmPanel" type="Panel" parent="Root/ConfirmDialog"]
custom_minimum_size = Vector2(1000, 350)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -500.0
offset_top = -175.0
offset_right = 500.0
offset_bottom = 175.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_confirm_panel")

[node name="VBox" type="VBoxContainer" parent="Root/ConfirmDialog/ConfirmPanel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 20.0
offset_top = 20.0
offset_right = -20.0
offset_bottom = -20.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 30

[node name="ConfirmLabel" type="Label" parent="Root/ConfirmDialog/ConfirmPanel/VBox"]
layout_mode = 2
size_flags_vertical = 3
theme_override_colors/font_color = Color(0.95, 0.95, 0.97, 1)
theme_override_font_sizes/font_size = 60
text = "Are you sure? Progress will be lost."
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 3

[node name="ButtonsHBox" type="HBoxContainer" parent="Root/ConfirmDialog/ConfirmPanel/VBox"]
layout_mode = 2
theme_override_constants/separation = 40
alignment = 1

[node name="YesButton" type="Button" parent="Root/ConfirmDialog/ConfirmPanel/VBox/ButtonsHBox"]
custom_minimum_size = Vector2(300, 0)
layout_mode = 2
theme_override_font_sizes/font_size = 60
theme_override_styles/normal = SubResource("StyleBoxFlat_confirm_button_normal")
theme_override_styles/pressed = SubResource("StyleBoxEmpty_button")
theme_override_styles/hover = SubResource("StyleBoxFlat_confirm_button_hover")
theme_override_styles/disabled = SubResource("StyleBoxEmpty_button")
theme_override_styles/focus = SubResource("StyleBoxEmpty_button")
text = "Yes"

[node name="NoButton" type="Button" parent="Root/ConfirmDialog/ConfirmPanel/VBox/ButtonsHBox"]
custom_minimum_size = Vector2(300, 0)
layout_mode = 2
theme_override_font_sizes/font_size = 60
theme_override_styles/normal = SubResource("StyleBoxFlat_confirm_button_normal")
theme_override_styles/pressed = SubResource("StyleBoxEmpty_button")
theme_override_styles/hover = SubResource("StyleBoxFlat_confirm_button_hover")
theme_override_styles/disabled = SubResource("StyleBoxEmpty_button")
theme_override_styles/focus = SubResource("StyleBoxEmpty_button")
text = "No"
